<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>i2c_interface</name>
  <version>0.0.0</version>
  <description>Interface for communication the i2c bus. this node essentially is a server providing a service. any caller can request writting and reading operation to this node</description>
  <maintainer email="axel.chabrerie@gmail.com">pi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>custom_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
