<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abstract_driver</name>
  <version>0.0.0</version>
	<description>
		Abstract interface for a driver.
		Provides an interface containing i2c client for request to the i2c service, and method to ping the driver to make sure it's available before proceeding to further operations.
	</description>
  <maintainer email="axel.chabrerie@gmail.com">pi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
